--- a/kasir/index.html
+++ b/kasir/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MARVINZ POS - Marvin Ganteng </title>
+    <title>Little - POS System</title>
     <link rel="stylesheet" href="./style.css?v=1.2">
     <link rel="stylesheet" href="./dark-theme.css?v=1.2">
     <link rel="manifest" href="./manifest.json">
@@ -33,7 +33,7 @@
                     <i class="fa-solid fa-mug-hot" style="font-size: 1.8rem;"></i>
                 </div>
                 <div class="logo-info" style="align-items: center; gap: 2px;">
-                    <h2 style="font-size: 1.4rem; font-weight: 800; color: var(--primary-dark); margin: 0;">MARVINZ</h2>
+                    <h2 style="font-size: 1.4rem; font-weight: 800; color: var(--primary-dark); margin: 0;">LITTLE</h2>
                     <span
                         style="font-size: 0.75rem; color: var(--text-muted); text-transform: uppercase; letter-spacing: 1px;">Point
                         of Sale</span>
@@ -159,10 +159,16 @@
         </main>
 
         <!-- Cart Section -->
-        <aside class="cart-panel">
+        <aside id="cart-panel" class="cart-panel">
             <div class="cart-header">
                 <h3 data-i18n="cart_title">Order Details</h3>
-                <span class="order-id">#ORD-001</span>
+                <div style="display: flex; align-items: center; gap: 8px;">
+                    <span class="order-id">#ORD-001</span>
+                    <button class="close-cart-btn" onclick="toggleCart()"
+                        style="display:none; background:none; border:none; font-size:1.2rem; cursor:pointer; color:var(--text-muted);">
+                        <i class="fa-solid fa-times"></i>
+                    </button>
+                </div>
             </div>
 
             <div class="cart-items" id="cart-items">
